# mnb

./: .gitignore  LICENSE  README.md  mnb.py  pyproject.toml
.devcontainer/: devcontainer.json
src/mnb/: __init__.py  models.py
tests/: test_mnb.py
